--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img src="http://www.gravatar.com/avatar/f9668e754daecfa1260501a71ee9876a?s=16" alt="Avatar" />
+                <img src="/img/avatar_x16.png" alt="Avatar" width=16 height=16 />
                 Kenzie Togami
             </a>
         </div>
