--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <img src="/img/avatar_x16.png" alt="Avatar" width=16 height=16 />
-                Kenzie Togami
+                Kenzie Togami - 𝄞
             </a>
         </div>
 
